--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport"
+    content="width=device-width">
     <title>Web 240</title>
   </head>
   <body>
