jQuery rule added and linked to html file

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             </div>
         </footer>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script src="menu.js"></script>
     </body>
 
 </html>
