The JavaScript code, document.createElement was added in the index.html file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <head>
         <title>Resto</title>
         <link href="style.css" type="text/css" rel="stylesheet">
+        <script>
+          document.createElement('picture');
+        </script>
+        <script src="picturefill.js" async></script>
     </head>
 
     <body>
