Assignment 7 - Picturefill link was added in the script tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script>
           document.createElement('picture');
         </script>
-        <script src="picturefill.js" async></script>
+        <script src="https://cdn.rawgit.com/scottjehl/picturefill/3.0.2/dist/picturefill.js" async></script>
     </head>
 
     <body>
